--- a/src/main/webapp/arc_info.html
+++ b/src/main/webapp/arc_info.html
@@ -12,11 +12,13 @@
 	<link rel="stylesheet" type="text/css" href="iconfont/iconfont.css">
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script src="js/jquery.movebg.js"></script>
+	<script src="js/lib/mock.js"></script>
+	<script src="js/lib/mock_arcinfo.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
 			$(".nav,.nav_submenu,.move-bg").movebg({
 				width:120/*滑块的大小*/,
-				extra:20/*额外反弹的距离*/,
+				extra:30/*额外反弹的距离*/,
 				speed:300/*滑块移动的速度*/,
 				rebound_speed:400/*滑块反弹的速度*/
 			});
@@ -33,6 +35,11 @@
 			});
 		});
 		
+		
+		//文章详情.
+		$(document).ready(function(){
+			
+		});
 	</script>
 	<!--[if IE 6]>
 		<style type="text/css">
@@ -52,7 +59,7 @@
 	<!-- 导航 -->
 	<div class="nav_nav1" id="fixed">
 		<div class="nav_nav">
-			<div class="nav">
+			<div class="nav" id="fixed">
 		        <ul class="nav_list">
 		            <li class="nav-item cur"><a href="index.html">网站首页</a></li>
 		            <li class="nav-item"><a href="#">干货分享</a></li>
@@ -103,46 +110,45 @@
 		<div class="content_left">
 
 			<div class="arc_list">
-				<h1><a href="arc_info.html" title="">85微商城双旦活动设计源文件及H5页面</a></h1>
+				<h1><a href="#" title="">85微商城双旦活动设计源文件及H5页面</a></h1>
 				<span>作者：<a href="search.html">骆一鸣</a>   时间：2015年1月27日</span>
 				<div><img src="images/photo.jpg"></div>
 				<p>本站的各项电子服务的所有权和运作权归本站。本站提供的服务将完全按照其发布的服务条款和操作规则严格执行。您同意所有本站发布的服务条款和操作规则的约定</p>
-				<button><a href="arc_info.html">查看更多</a></button>
-			</div>
+				<p>提到自由软件界 LTS 版本，不得不说 Ubuntu。Ubuntu 的策略是每两年发布一个 LTS 版本，其中桌面版可以获得3年的技术支持，服务器版可以获得5年的技术支持。这种发布方式对于开发者、使用者来讲就能在一定时间内保证自己在某个版本上的付出不会由于频繁的更新版本而变的疲于奔命。</p>
+				<p>说明中还提到：如果 Laravel 和 Symfony 发布 LTS 版本的步调一致，也就是每两年发布一次 LTS 版本，那么将会为每一个 Laravel LTS 版本提供3年的 bug 修复支持和4年的安全问题修复支持。</p>
+				<p>接下来的一两个月内还会有详细的信息被披露出来，这必定是一个非常重要也是非常令人激动的消息，对于广大开发者和采用 Laravel 的公司来说这将是对产品和代码的一个有力保障。</p>
+				<p>本站的各项电子服务的所有权和运作权归本站。本站提供的服务将完全按照其发布的服务条款和操作规则严格执行。您同意所有本站发布的服务条款和操作规则的约定</p>
+				<p>提到自由软件界 LTS 版本，不得不说 Ubuntu。Ubuntu 的策略是每两年发布一个 LTS 版本，其中桌面版可以获得3年的技术支持，服务器版可以获得5年的技术支持。这种发布方式对于开发者、使用者来讲就能在一定时间内保证自己在某个版本上的付出不会由于频繁的更新版本而变的疲于奔命。</p>
+				<p>说明中还提到：如果 Laravel 和 Symfony 发布 LTS 版本的步调一致，也就是每两年发布一次 LTS 版本，那么将会为每一个 Laravel LTS 版本提供3年的 bug 修复支持和4年的安全问题修复支持。</p>
 
-			<div class="arc_list">
-				<h1><a href="arc_info.html" title="">85微商城双旦活动设计源文件及H5页面</a></h1>
-				<span>作者：<a href="search.html">骆一鸣</a>   时间：2015年1月27日</span>
-				<div>
-					<div class="down_link">
-						<h2>下载地址：</h2>
-						<p><a href="#">MY SQL中文版下载地址（1月27日更新）</a></p>
-					</div>
+				<div class="bdsharebuttonbox">
+					<a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>
+					<a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
+					<a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a>
+					<a href="#" class="bds_youdao" data-cmd="youdao" title="分享到有道云笔记"></a>
+					<a href="#" class="bds_fx" data-cmd="fx" title="分享到飞信"></a>
 				</div>
-				<p>本站的各项电子服务的所有权和运作权归本站。本站提供的服务将完全按照其发布的服务条款和操作规则严格执行。您同意所有本站发布的服务条款和操作规则的约定</p>
-				<button><a href="arc_info.html">查看更多</a></button>
+				<div class="tag">
+					<i class="iconfont icon-biaoqian"></i>
+					<a href="#">规则</a>
+					<a href="#">产品和代码</a>
+					<a href="#">各项电子服务</a>
+				</div>
+				
 			</div>
 
-			<div class="arc_list">
-				<h1><a href="arc_info.html" title="">85微商城双旦活动设计源文件及H5页面</a></h1>
-				<span>作者：<a href="search.html">骆一鸣</a>   时间：2015年1月27日</span>
-				<div></div>
-				<p>本站的各项电子服务的所有权和运作权归本站。本站提供的服务将完全按照其发布的服务条款和操作规则严格执行。您同意所有本站发布的服务条款和操作规则的约定</p>
-				<button><a href="arc_info.html">查看更多</a></button>
+			<div class="author">
+				<a href="#"><img src="images/author.png"></a>
+				<div class="author_info">
+					<span><a href="search.html">张三先</a></span>
+					<p>当然了，LTS 版本也将消耗更多人力去维护各个版本，而大部分开源软件是做不到的，因此我们就会看到很多开源软件其实都成了“版本帝”。</p>
+				</div>
 			</div>
-	
-			<div class="pagelist">
+
+			<div class="nextPage">
 				<ul>
-					<li><a href="#" title="首页">首页</a></li>
-					<li><a href="#" title="上一页"><i class="iconfont icon-iconfonti2-copy"></i></a></li>
-					<li class="cur"><a href="#" title="1">1</a></li>
-					<li><a href="#" title="2">2</a></li>
-					<li><a href="#" title="3">3</a></li>
-					<li><a href="#" title="4">4</a></li>
-					<li><a href="#" title="5">5</a></li>
-					<li><a href="#" title="更多">...</a></li>
-					<li><a href="#" title="下一页"><i class="iconfont icon-iconfonti2"></i></a></li>
-					<li><a href="#" title="尾页">尾页</a></li>
+					<li>上一篇：<a href="#">有详细的信息被披露出来</a></li>
+					<li>下一篇：<a href="#">有详细的信息被披露出来，这必定有详细的信息被披露出来，这必定</a></li>
 				</ul>
 			</div>
 
@@ -269,14 +275,21 @@
 	
 	<!-- 返回顶部 -->
 	<script type="text/javascript" src="js/backtop.js"></script>
-	<script   type="text/javascript" src="js/tag.js"></script>
 	<!-- 导航跟随固定 --> 
 	<script type="text/javascript">
 		var offs=$('#fixed').offset();
 		$(window).scroll(function(){
 			scrollLis();
 		});
-	</script>
 
+		// 分享
+		window._bd_share_config= {
+		"common"
+			:{"bdSnsKey": {
+		},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"24"
+		},"share": {
+		}};
+		with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
+	</script>
 </body>
 </html>
