--- a/src/main/webapp/dev/arc_info.html
+++ b/src/main/webapp/dev/arc_info.html
@@ -12,8 +12,6 @@
 	<link rel="stylesheet" type="text/css" href="iconfont/iconfont.css">
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script src="js/jquery.movebg.js"></script>
-	<script src="js/lib/mock.js"></script>
-	<script src="js/lib/mock_arcinfo.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
 			$(".nav,.nav_submenu,.move-bg").movebg({
@@ -33,12 +31,6 @@
 			$(".nav li").mouseout(function(){
 				$(this).children(".nav_submenu").hide();
 			});
-		});
-		
-		
-		//文章详情.
-		$(document).ready(function(){
-			
 		});
 	</script>
 	<!--[if IE 6]>
@@ -275,6 +267,7 @@
 	
 	<!-- 返回顶部 -->
 	<script type="text/javascript" src="js/backtop.js"></script>
+	<script type="text/javascript" src="js/tag.js"></script>
 	<!-- 导航跟随固定 --> 
 	<script type="text/javascript">
 		var offs=$('#fixed').offset();
