--- a/src/main/webapp/dev/pages/posts.html
+++ b/src/main/webapp/dev/pages/posts.html
@@ -7,14 +7,15 @@
 	<meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 	<title>陆鹰前端社区</title>
-	<link rel="stylesheet" type="text/css" href="css/reset.css?!">
-	<link rel="stylesheet" type="text/css" href="css/style.css?!">
-	<link rel="stylesheet" type="text/css" href="iconfont/iconfont.css">
-	<link rel="stylesheet" href="css/posts.css" />
-	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script src="js/jquery.movebg.js"></script>	
-	<script src="http://mockjs.com/dist/mock.js"></script>
-	<script type="text/javascript" src="js/posts.js" ></script>
+	<link rel="stylesheet" type="text/css" href="../css/reset.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" type="text/css" href="../../static/iconfont/iconfont.css">
+	<link rel="stylesheet" href="../css/posts.css" />
+	<script type="text/javascript" src="../js/lib/jquery.js"></script>
+	<script src="../js/common/jquery-movebg.js"></script>	
+	<script src="../js/lib/mock.js"></script>
+	<script type="text/javascript" src="../js/posts.js" ></script>
+	<script type="text/javascript" src="../js/jquery.pagination.min.js" ></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
 			$(".nav,.nav_submenu,.move-bg").movebg({
@@ -105,7 +106,7 @@
 		<div class="content_left">
 			<!-- 搜索列表 -->
 			<div class="search">
-				<img src="images/author.png">
+				<img src="../img/author.png">
 				<p class="posts_author">骆一鸣</p>
 				<span><i class="iconfont icon-wenzhang"></i> 共 19 篇文章</span>
 			</div>
@@ -119,7 +120,7 @@
 			<div class="arc_list">
 				<h1><a href="arc_info.html" title="" class="posts_title">85微商城双旦活动设计源文件及H5页面</a></h1>
 				<span>作者：<a href="#" class="posts_author">骆一鸣</a>   时间：<a class="posts_time">2015年1月27日</a></span>
-				<div><img src="images/photo.jpg"></div>
+				<div><img src="../img/photo.jpg"></div>
 				<p class="posts_content">本站的各项电子服务的所有权和运作权归本站。本站提供的服务将完全按照其发布的服务条款和操作规则严格执行。您同意所有本站发布的服务条款和操作规则的约定</p>
 				<button><a href="arc_info.html">查看更多</a></button>
 			</div>
@@ -145,19 +146,7 @@
 				<button><a href="arc_info.html">查看更多</a></button>
 			</div>
 	
-			<div class="pagelist">
-				<ul>
-					<li><a href="#" title="首页">首页</a></li>
-					<li><a href="#" title="上一页"><i class="iconfont icon-iconfonti2-copy"></i></a></li>
-					<li class="cur"><a href="#" title="1">1</a></li>
-					<li><a href="" title="2">2</a></li>
-					<li><a href="" title="3">3</a></li>
-					<li><a href="" title="4">4</a></li>
-					<li><a href="" title="5">5</a></li>
-					<li><a href="#" title="更多">...</a></li>
-					<li><a href="#" title="下一页"><i class="iconfont icon-iconfonti2"></i></a></li>
-					<li><a href="#" title="尾页">尾页</a></li>
-				</ul>
+			<div class="pagelist">			
 			</div>
 
 		</div>
@@ -282,7 +271,7 @@
 	</div>
 	
 	<!-- 返回顶部 -->
-	<script type="text/javascript" src="js/backtop.js"></script>
+	<script type="text/javascript" src="../js/common/jquery-backtop.js"></script>
 	<!-- 导航跟随固定 --> 
 	<script type="text/javascript">
 		var offs=$('#fixed').offset();
