--- a/src/main/webapp/dev/pages/arc_info.html
+++ b/src/main/webapp/dev/pages/arc_info.html
@@ -36,13 +36,6 @@
 			});
 		});
 	</script>
-	<!--[if IE 6]>
-		<style type="text/css">
-			html{overflow:hidden}
-			body{height:100%;overflow:auto}
-			.nav_fixed{position:absolute;left:0px;}
-		</style>
-	<![endif]-->
 </head>
 <body>
 	
@@ -101,26 +94,13 @@
 	<div class="content">
 		<!-- 左 -->
 		<div class="content_left">
-			<!--文章详情部分-->
+			
 			<div class="arc_list">
-				<!--分享部分-->
-				<div class="bdsharebuttonbox">
-					<a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>
-					<a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
-					<a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a>
-					<a href="#" class="bds_youdao" data-cmd="youdao" title="分享到有道云笔记"></a>
-					<a href="#" class="bds_fx" data-cmd="fx" title="分享到飞信"></a>
-				</div>
-				<!--标签链接-->
-				<div class="tag">
-					<i class="iconfont icon-biaoqian"></i>
-					<a href="#">规则</a>
-					<a href="#">产品和代码</a>
-					<a href="#">各项电子服务</a>
-				</div>	
+				<!--此处handlebars插入文章详情部分-->
 			</div>
-			<!--作者信息及其评论-->
-			<div class="author"></div>
+			<div class="author">
+				<!--此处handbars插入作者信息及其评论-->
+			</div>
 			<div class="nextPage">
 				<ul>
 					<li>上一篇：<a href="#">有详细的信息被披露出来</a></li>
@@ -268,20 +248,33 @@
 		with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
 	</script>
 	
-	<!--改用handbars模板添加动态数据,固定内容暂时没有做处理-->
-	<script id="handle" type="text/x-handlebars-template">
+	<!--改用handbars模板添加文章详情部分数据-->
+	<script id="arclist" type="text/x-handlebars-template">
 		<h1><a href="#" title=""></a>{{postId.title}}</h1>
-		<span>作者：<a href="search.html">{{postId.author}}</a>&nbsp;<i style="font-style: normal;">{{time}}</i></span>
+		<span>作者：<a href="search.html">{{this.postId.author}}</a>&nbsp;<i style="font-style: normal;">{{time}}</i></span>
 		<div><img src="../images/photo.jpg"></div>
-		<p>{{postId.content}}</p>
-		<p>{{postId.content}}</p>
-		<p>{{postId.content}}</p>
-		<p>{{postId.content}}</p>
-		<p>{{postId.content}}</p>
-		<p>{{postId.content}}</p>
-		<p>{{postId.content}}</p>
+		<p>{{this.postId.content}}</p>
+		<p>{{this.postId.content}}</p>
+		<p>{{this.postId.content}}</p>
+		<p>{{this.postId.content}}</p>
+		<p>{{this.postId.content}}</p>
+		<p>{{this.postId.content}}</p>
+		<p>{{this.postId.content}}</p>
+		<div class="bdsharebuttonbox">
+			<a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>
+			<a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
+			<a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a>
+			<a href="#" class="bds_youdao" data-cmd="youdao" title="分享到有道云笔记"></a>
+			<a href="#" class="bds_fx" data-cmd="fx" title="分享到飞信"></a>
+		</div>
+		<div class="tag">
+			<i class="iconfont icon-biaoqian"></i>
+			<a href="#">规则</a>
+			<a href="#">产品和代码</a>
+			<a href="#">各项电子服务</a>
+		</div>
 	</script>
-	<script id="handle1" type="text/x-handlebars-template">
+	<script id="author" type="text/x-handlebars-template">
 			<a href="#"><img src="../images/author.png"></a>
 			{{#with postId.comments}}
 				{{#with this.commentsList}}
