--- a/src/main/webapp/dev/pages/arc_info.html
+++ b/src/main/webapp/dev/pages/arc_info.html
@@ -253,13 +253,7 @@
 		<h1><a href="#" title=""></a>{{postId.title}}</h1>
 		<span>作者：<a href="search.html">{{this.postId.author}}</a>&nbsp;<i style="font-style: normal;">{{time}}</i></span>
 		<div><img src="../images/photo.jpg"></div>
-		<p>{{this.postId.content}}</p>
-		<p>{{this.postId.content}}</p>
-		<p>{{this.postId.content}}</p>
-		<p>{{this.postId.content}}</p>
-		<p>{{this.postId.content}}</p>
-		<p>{{this.postId.content}}</p>
-		<p>{{this.postId.content}}</p>
+		<p style="text-indent: 2em;">{{this.postId.content}}</p>
 		<div class="bdsharebuttonbox">
 			<a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>
 			<a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
