--- a/src/main/webapp/dev/pages/login/register.html
+++ b/src/main/webapp/dev/pages/login/register.html
@@ -48,6 +48,6 @@
 	  <script src="../../js/lib/jquery.min.js"></script>
     <script src="../../js/lib/mock.js"></script>
 	  <script src="../../js/lib/bootstrap.min.js"></script>
-    <script src="../../js/user/register.js"></script>
+    <script src="../../js/login/register.js"></script>
   </body>
 </html>
