--- a/src/main/webapp/dev/pages/login/login.html
+++ b/src/main/webapp/dev/pages/login/login.html
@@ -39,6 +39,6 @@
 	  <script src="../../js/lib/jquery.min.js"></script>
 	  <script src="../../js/lib/bootstrap.min.js"></script>
     <script src="../../js/lib/mock.js"></script>
-    <script src="../../js/user/login.js"></script>
+    <script src="../../js/login/login.js"></script>
   </body>
 </html>
